-prepared controller to delete dates -fixed footer wrapping

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,11 +32,13 @@ footer {
     text-align: center;
     height: 45px;
     padding-top: 25px;
+    width: 100%;
 }
 
 body {
     margin: 0 0 0 0;
     height: 100%;
+    min-height: 100%;
 }
 
 h1 {
@@ -55,9 +57,9 @@ a {
 #container {
     margin: auto;
     width: 70%;
-    height: 100%;
     display: block;
     background-color: white;
+    overflow: hidden;
 }
 
 #content {
@@ -285,6 +287,10 @@ a {
     margin-bottom: 20px;
     border-radius: 2px;
     box-shadow: 0 0 2px rgba(0,0,0,.12),0 2px 4px rgba(0,0,0,.24);
+}
+
+.invite {
+    margin-bottom: 50px;
 }
 
     .friend:hover {
